[package]
name = "yausg"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy-inspector-egui = "0.14.0"
bevy-inspector-egui-rapier = { version = "0.8", features = ["rapier3d"] }
bevy_rapier3d = { version = "0.19.0", features = ["simd-stable", "debug-render" ] }
rand = "0.8.5"

# Bevy optimization settings
# in `Cargo.toml` or `.cargo/config.toml`
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# Even better release performance at compile time cost
[profile.release]
lto = "thin"
