[package]
name = "yausg"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
bevy_prototype_lyon = "0.9.0"
lyon_algorithms = "1.0.3"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.15"
#Gone? bevy-inspector-egui-rapier = { version = "0.10.0", features = ["rapier3d"] }
rand = "0.8.5"
regex = "1.9.3"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
bevy_rapier3d = { version = "0.22.0", features = ["simd-stable", "debug-render", "parallel" ] }

[target.'cfg(target_arch="wasm32")'.dependencies]
bevy_rapier3d = { version = "0.22.0", features = ["simd-stable", "debug-render"] }

# Bevy optimization settings
# in `Cargo.toml` or `.cargo/config.toml`
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# Even better release performance at compile time cost
[profile.release]
lto = "thin"
